apps/base/part-db/deployment.yaml
# apps/base/part-db/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app partdb
  labels:
    app.kubernetes.io/name: *app
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  serviceName: *app
  revisionHistoryLimit: 0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - name: *app
          image: part-db1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: *app-uploads
              mountPath: /var/www/html/uploads
            - name: *app-media
              mountPath: /var/www/html/public/media
          envs:
            - name: APP_ENV
              value: docker
            - name: DEFAULT_LANG
              value: en
            - name: BASE_CURRENCY
              value: EUR
            - name: INSTANCE_NAME
              value: Part-DB
            - name: ALLOW_ATTACHEMENT_DOWNLOADS
              value: "0"
            - name: USE_GRAVATAR
              value: "0"
            - name: DEFAULT_TIMEZONE
              value: Europe/Amsterdam
            - name: BANNER
              value: My Workbench Parts Database
            - name: TRUSTED_PROXIES
              value: 127.0.0.0/8,10.0.0.0/8
          resources:
            limits:
              memory: "4096Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: 300m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
      volumes:
        - name: *app-uploads
          persistentVolumeClaim:
            claimName: *app-uploads
        - name: *app-media
          persistentVolumeClaim:
            claimName: *app-media
