apps/base/part-db/service.yaml
# apps/base/part-db/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app partdb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: *app
