apps/base/part-db/ingressroute.yaml
# apps/base/part-db/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app partdb
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`fix-me.example.com`)"
      kind: Rule
      services:
        - name: *app
          port: 80
  tls: {}
